--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -36,100 +36,97 @@
     <input type="file" id="file-upload" class="filepond" data-max-files="5" multiple>
 </div>
 
-<div class="input-row d-flex align-items-end mt-2 mb-2">
+<div class="input-area mt-2 mb-2">
 
-    <!-- COLUMNA IZQUIERDA: Contiene todos los inputs y crece para ocupar el espacio disponible -->
-    <div class="flex-grow-1">
-        <!-- Fila superior: Prompts y (opcional) datos de empresa -->
-        <div class="row g-2 mb-2">
-            {% set prompt_col_class = 'col-md-4' %}
-            <div class="{{ prompt_col_class }}">
-                <div class="position-relative h-100">
-                    <!-- selector de prompts -->
-                    <div class="input-group dropup h-100">
-                        <button type="button"
-                                id="prompt-select-button"
-                                class="btn btn-light border dropdown-toggle w-100 text-start"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                            Prompts disponibles ....
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-soft w-100">
-                            {% if prompts and prompts.message %}
-                            {% for category_group in prompts.message %}
-                                <li><h6 class="dropdown-header">{{ category_group.category_name }}</h6></li>
-                                {% for prompt in category_group.prompts %}
-                                    <li><a class="dropdown-item" href="#" data-value="{{ prompt.prompt }}">{{ prompt.description }}</a></li>
-                                {% endfor %}
-                                {% if not loop.last %}
-                                    <li><hr class="dropdown-divider"></li>
-                                {% endif %}
-                            {% endfor %}
-                            {% endif %}
-                        </ul>
-                    </div>
-
-                    <!-- Botón de limpiar para el selector de prompts -->
-                    <button type="button" id="clear-selection-button"
-                            class="btn clear-specific-data-button"
-                            style="display: none;">
-                        <i class="bi bi-x-circle-fill"></i>
+    <!-- Fila superior: Prompts y (opcional) datos de empresa -->
+    <div class="row g-2 mb-2">
+        {% set prompt_col_class = 'col-md-4' %}
+        <div class="{{ prompt_col_class }}">
+            <div class="position-relative h-100">
+                <!-- selector de prompts -->
+                <div class="input-group dropup h-100">
+                    <button type="button"
+                            id="prompt-select-button"
+                            class="btn btn-light border dropdown-toggle w-100 text-start"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                        Prompts disponibles ....
                     </button>
+                    <ul class="dropdown-menu dropdown-menu-soft w-100">
+                        {% if prompts and prompts.message %}
+                        {% for category_group in prompts.message %}
+                            <li><h6 class="dropdown-header">{{ category_group.category_name }}</h6></li>
+                            {% for prompt in category_group.prompts %}
+                                <li><a class="dropdown-item" href="#" data-value="{{ prompt.prompt }}">{{ prompt.description }}</a></li>
+                            {% endfor %}
+                            {% if not loop.last %}
+                                <li><hr class="dropdown-divider"></li>
+                            {% endif %}
+                        {% endfor %}
+                        {% endif %}
+                    </ul>
                 </div>
-                <input type="hidden" id="prompt-select-value" name="prompt_select_value">
-                <input type="hidden" id="prompt-select-description" name="prompt-select-description">
-            </div>
 
-            {% if company_ui_config and company_ui_config.enabled %}
-            <div class="col-md">
-                <!-- optional: company specific data -->
-                <div class="position-relative">
-                    <div class="form-floating">
-                        <input type="text" id="{{ company_ui_config.id }}" class="form-control form-control-soft specific-data-input" placeholder="{{ company_ui_config.placeholder }}">
-                        <label for="{{ company_ui_config.id }}">{{ company_ui_config.label }}</label>
-                    </div>
-                    <button type="button" id="clear-{{ company_ui_config.id }}-button" class="btn clear-specific-data-button" style="display: none;"><i class="bi bi-x-circle-fill"></i></button>
-                </div>
+                <!-- Botón de limpiar para el selector de prompts -->
+                <button type="button" id="clear-selection-button"
+                        class="btn clear-specific-data-button"
+                        style="display: none;">
+                    <i class="bi bi-x-circle-fill"></i>
+                </button>
             </div>
-            {% endif %}
+            <input type="hidden" id="prompt-select-value" name="prompt_select_value">
+            <input type="hidden" id="prompt-select-description" name="prompt-select-description">
         </div>
 
-        <!-- Fila inferior: Textarea principal -->
-        <div class="row g-2">
-            <div class="col">
-                <div class="input-group">
-                    <textarea id="question" placeholder="Escribe tu consulta aquí..." class="form-control form-control-soft" style="resize: none;" rows="2" required></textarea>
+        {% if company_ui_config and company_ui_config.enabled %}
+        <div class="col-md">
+            <!-- optional: company specific data -->
+            <div class="position-relative">
+                <div class="form-floating">
+                    <input type="text" id="{{ company_ui_config.id }}" class="form-control form-control-soft specific-data-input" placeholder="{{ company_ui_config.placeholder }}">
+                    <label for="{{ company_ui_config.id }}">{{ company_ui_config.label }}</label>
                 </div>
+                <button type="button" id="clear-{{ company_ui_config.id }}-button" class="btn clear-specific-data-button" style="display: none;"><i class="bi bi-x-circle-fill"></i></button>
             </div>
         </div>
+        {% endif %}
     </div>
 
-    <!-- COLUMNA DERECHA: Contiene los botones y tiene un ancho fijo basado en su contenido -->
-    <div class="flex-shrink-0 ms-2">
-        <div class="d-flex flex-column align-items-center">
-            <!-- Fila 1: Botones Enviar/Detener -->
-            <div id="send-button-container" class="mb-1">
-                <button id="send-button" class="btn btn-primary px-4 rounded">Enviar</button>
+    <!-- Fila inferior: Contiene el Textarea y los Botones, alineados por arriba -->
+    <div class="row g-2 align-items-start">
+        <!-- Columna Izquierda (Textarea) -->
+        <div class="col">
+            <div class="input-group">
+                <textarea id="question" placeholder="Escribe tu consulta aquí..." class="form-control form-control-soft" style="resize: none;" rows="2" required></textarea>
             </div>
-            <div id="stop-button-container" class="mb-1" style="display: none;">
-                <button id="stop-button" class="btn btn-danger px-4 rounded"><i class="bi bi-stop-circle" style="margin-right: 5px;"></i> Detener</button>
-            </div>
-            <!-- Fila 2: Iconos -->
-            <div class="d-flex justify-content-center">
-                <div id="paperclip-button-container" class="me-2">
-                    <a href="javascript:void(0);" id="paperclip-button" title="Adjuntar archivos"><i class="bi bi-paperclip" style="font-size: 1rem; color: #6c757d;"></i></a>
+        </div>
+
+        <!-- Columna Derecha (Botones) -->
+        <div class="col-auto">
+            <div class="d-flex flex-column align-items-center">
+                <!-- Fila 1: Botones Enviar/Detener -->
+                <div id="send-button-container" class="mb-1">
+                    <button id="send-button" class="btn btn-primary px-4 rounded">Enviar</button>
                 </div>
-                <div id="view-files-button-container" style="display: none;">
-                    <a href="javascript:void(0);" id="view-files-button" title="Ver archivos adjuntos"><i class="bi bi-file-earmark-text" style="font-size: 1rem; color: #007bff;"></i></a>
+                <div id="stop-button-container" class="mb-1" style="display: none;">
+                    <button id="stop-button" class="btn btn-danger px-4 rounded"><i class="bi bi-stop-circle" style="margin-right: 5px;"></i> Detener</button>
                 </div>
-                <div class="buttons-container">
-                    <i id="history-button" class="bi bi-clock-history text-success" style="font-size: 1.5em; cursor: pointer;" title="Historial con mis consultas"></i>
-                    <i id="send-feedback-button" class="bi bi-emoji-smile" style="font-size: 1.5em; cursor: pointer; color: #532323;" title="Tu feedback es muy importante"></i>
+                <!-- Fila 2: Iconos -->
+                <div class="d-flex justify-content-center">
+                    <div id="paperclip-button-container" class="me-2">
+                        <a href="javascript:void(0);" id="paperclip-button" title="Adjuntar archivos"><i class="bi bi-paperclip" style="font-size: 1rem; color: #6c757d;"></i></a>
+                    </div>
+                    <div id="view-files-button-container" style="display: none;">
+                        <a href="javascript:void(0);" id="view-files-button" title="Ver archivos adjuntos"><i class="bi bi-file-earmark-text" style="font-size: 1rem; color: #007bff;"></i></a>
+                    </div>
+                    <div class="buttons-container">
+                        <i id="history-button" class="bi bi-clock-history text-success" style="font-size: 1.5em; cursor: pointer;" title="Historial con mis consultas"></i>
+                        <i id="send-feedback-button" class="bi bi-emoji-smile" style="font-size: 1.5em; cursor: pointer; color: #532323;" title="Tu feedback es muy importante"></i>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 
 <!-- Incluir los modales desde un archivo externo -->
 {% include 'chat_modals.html' %}
