--- a/src/iatoolkit/templates/home.html
+++ b/src/iatoolkit/templates/home.html
@@ -13,7 +13,7 @@
       <div class="border rounded p-4 shadow-sm bg-light">
         <h4 class="text-muted fw-semibold text-start mb-3">login integrado (IAToolkit)</h4>
         <form id="login-form"
-              action="{{ url_for('initiate_login', company_short_name=company_short_name) }}"
+              action="{{ url_for('initiate_login', company_short_name=company_short_name, external_login=True) }}"
               method="post">
           <div class="mb-3">
             <label for="company_short_name" class="form-label d-block text-muted">Empresa</label>
