--- a/src/iatoolkit/templates/_login_widget.html
+++ b/src/iatoolkit/templates/_login_widget.html
@@ -19,7 +19,8 @@
       </div>
       <div class="mb-3">
         <label for="password" class="form-label d-block text-muted">Contraseña</label>
-        <input type="password" id="password" name="password" class="form-control" required>
+        <input type="password" id="password" name="password"
+               class="form-control" required>
       </div>
       <button type="submit" class="btn btn-branded-primary w-100 fw-bold py-2">
           Ingresar
