--- a/src/iatoolkit/templates/index.html
+++ b/src/iatoolkit/templates/index.html
@@ -53,7 +53,13 @@
                             <div class="opensource-content">
                                 <h3>100% Open Source</h3>
                                 <p>Construido en Python, IAToolkit te da control total. Audita el código, adáptalo y contribuye a una comunidad en crecimiento.</p>
-                                <a href="https://github.com/tu-usuario/iatoolkit" target="_blank" class="btn btn-light"><i class="bi bi-github me-2"></i>Ir a GitHub</a>
+
+                                <a href="https://github.com/tu-usuario/iatoolkit" target="_blank" class="btn btn-light">
+                                    <i class="bi bi-github me-2"></i>Ir a GitHub
+                                    {% if iatoolkit_version %}
+                                        <span class="badge bg-dark ms-2">{{ iatoolkit_version }}</span>
+                                    {% endif %}
+                                </a>
                             </div>
                         </div>
 
