--- a/src/iatoolkit/templates/index.html
+++ b/src/iatoolkit/templates/index.html
@@ -124,7 +124,7 @@
                 <div class="col-md-1 d-none d-md-block text-center">
                     <!-- Opcional: avatar (si no tienes imagen, deja el ícono) -->
                     <div class="author-avatar mx-auto">
-                        <img src="/static/images/fernando.jpg" alt="Fernando Libedinsky" class="avatar-img">
+                        <i class="bi bi-person-circle"></i>
                     </div>
                 </div>
                 <div class="col-md-11">
