--- a/src/iatoolkit/templates/index.html
+++ b/src/iatoolkit/templates/index.html
@@ -137,8 +137,8 @@
                         </div>
                         <p class="author-bio mt-2 mb-0 w-75">
 Soy <strong>Fernando Libedinsky</strong>, ingeniero de software y creador de <strong>IAToolkit</strong>.
-Tras una extensa trayectoria en el desarrollo de tecnología, sigo movido por la misma curiosidad que me llevó a programar por primera vez: aprender, explorar y construir cosas nuevas.
-<br>IAToolkit es la continuación de ese impulso, una plataforma creada para ayudar a las empresas a integrar la IA de manera práctica y creativa.
+<br>Tras una extensa trayectoria en el desarrollo de tecnología, sigo movido por la misma curiosidad que me llevó a programar por primera vez: aprender, explorar y construir cosas nuevas.
+<br>IAToolkit es la continuación de ese impulso, una plataforma creada para conectar a las empresas  con la IA muy rapidamente.
 </p>
                     </div>
                 </div>
